--- a/css/setup.css
+++ b/css/setup.css
@@ -144,6 +144,12 @@ form {
     color: #666;
 }
 
+.terms input[type="checkbox"] {
+    margin: 0;
+    padding: 0;
+}
+
+
 
 /* 登録ボタンのスタイル */
 .submit-button {
