--- a/css/TOPpage.css
+++ b/css/TOPpage.css
@@ -14,6 +14,9 @@ body {
     display: flex;
 }
 
+.highlight {
+    color: rgb(255, 0, 162);
+  }
 /* 色とスタイルのカスタマイズ */
 .title {
     font-size: 32px;
